# docs/swagger.json
@@ -23,7 +23,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "sample"
+                    "actions"
                 ],
                 "summary": "Get Available Actions",
                 "operationId": "get-action",
@@ -51,7 +51,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "sample"
+                    "actions"
                 ],
                 "summary": "Post new action",
                 "operationId": "post-action",
